--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
   <body>
     <img src="images/logo.jpg" alt="Logo Image TR" class="mylogo">
 
-<img src="images/myphoto.jpg" alt="Tahmina's Photo" class="circleImage">
-
-<h1 class="title"> Tahmina Rahman </h1>
-
-
     <!--Navigation Bar -->
     <span class="open" onclick="openNavbar()">&#9776; Menu</span>
     <div id="navbar" class="overlay">
@@ -29,7 +24,12 @@
       </div>
     </div>
 
-    <!--  -->  
+    <h1 class="title"> Tahmina Rahman </h1>
+    <img src="images/myphoto.jpg" alt="Tahmina's Photo" class="circleImage">
+
+
+
+    <!-- Footer  -->  
     <footer class="footer">
       <div class=""> &copy; 2020 Designed and Developed by Tahmina Rahman </div>
 
@@ -37,7 +37,10 @@
         Facebook   https://www.flaticon.com/free-icon/facebook_124010#term=facebook&page=1&position=7 -->
       <div class= "footer">
         <ul>
-          <li class="socialli"> <a class="sociallink" href="https://www.facebook.com"> <img src="images/facebook.png" alt="Facebook icon" class="smedia"> Facebook </a> </li>
+          <li class="socialli"> <a class="sociallink" href="https://www.linkedin.com/in/tahmina-rahman-754491141/"> <img src="images/in.png" alt="LinkedIn icon" class="smedia"> IN </a> </li>
+          <li class="socialli"> <a class="sociallink" href="https://twitter.com/tahmina97310758"> <img src="images/tw.png" alt=" icon" class="smedia"> TW </a> </li>
+          <li class="socialli"> <a class="sociallink" href="https://www.github.com/Tahmina3"> <img src="images/gh.png" alt=" icon" class="smedia"> GH </a> </li>
+          <li class="socialli"> <a class="sociallink" href="https://www.instagram.com/tahminar6/"> <img src="images/ig.png" alt=" icon" class="smedia"> IG </a> </li>        
         </ul>
       </div>
     </footer>
