menu changes colours styles

--- a/index.html
+++ b/index.html
@@ -10,23 +10,25 @@
     <link rel="icon" type="image/png" href="images/t.png">
   </head>
   <body>
-    <img src="images/logo.jpg" alt="Logo Image TR" class="mylogo">
-
     <!--Navigation Bar -->
-    <span class="open" onclick="openNavbar()">&#9776; Menu</span>
+    <span class="open" onclick="openNavbar()">&#9776;</span>
     <div id="navbar" class="overlay">
       <a href="javascript:void(0);" onclick="closeNavbar()" class="close">&#9932;</a>
       <div class="overlay-content">
-        <a href="javascript:void(o);">Home</a>
+        <a href="index.html">Home</a>
         <a href="javascript:void(o);">About</a>
         <a href="javascript:void(o);">Work</a>
         <a href="javascript:void(o);">Contact</a>
       </div>
     </div>
 
-    <h1 class="title"> Tahmina Rahman </h1>
-    <img src="images/myphoto.jpg" alt="Tahmina's Photo" class="circleImage">
+    <img src="images/logo.jpg" alt="Logo Image TR" class="circle">
 
+
+    <h1 class="title"> Tahmina Rahman </h1>
+
+    <img src="images/150.png" alt="Tahmina's Photo" class="circle">
+<p> View Portfolio </p>
 
 
     <!-- Footer  -->  
