--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Navigation Bar -->
     <span class="open" onclick="openNavbar()">&#9776;</span>
     <div id="navbar" class="overlay">
-      <a href="javascript:void(0);" onclick="closeNavbar()" class="close">&#9932;</a>
+      <a href="javascript:void(0);" onclick="closeNavbar()" class="close">&#x2715;</a>
       <div class="overlay-content">
         <a href="index.html">Home</a>
         <a href="javascript:void(o);">About</a>
@@ -27,8 +27,9 @@
 
     <h1 class="title"> Tahmina Rahman </h1>
 
-    <img src="images/150.png" alt="Tahmina's Photo" class="circle">
-<p> View Portfolio </p>
+    <img src="images/150.png" alt="Tahmina's Photo" class="circle, hidden">
+    
+    <a href="about.html" class="buttons btn"> View Portfolio </a>
 
 
     <!-- Footer  -->  
