--- a/index.html
+++ b/index.html
@@ -22,28 +22,36 @@
       </div>
     </div>
 
-    <img src="images/logo.jpg" alt="Logo Image TR" class="circle">
+    <img src="images/logo.jpg" alt="Logo Image TR" class="logo">
 
 
-    <h1 class="title"> Tahmina Rahman </h1>
+    <h2 class="hidden">Hi! Welcome </h2>
+    <h2 class="hidden"> This is Tahmina, it's me... </h2>
+<div>
+
+    <h1 class="name"> Tahmina Rahman </h1>
 
     <img src="images/150.png" alt="Tahmina's Photo" class="circle, hidden">
     
-    <a href="about.html" class="buttons btn"> View Portfolio </a>
+    <a href="about.html" class="viewportfolio"> View Portfolio </a>
+</div>
 
+   <div>
+   <a href="https://www.figma.com/file/WYUTNiPFgrMbc8vTQ2Z5Li/my-cv?node-id=0%3A1" target="_blank" class="buttons btn"> Download CV>> </a>
+   </div>
 
     <!-- Footer  -->  
     <footer class="footer">
-      <div class=""> &copy; 2020 Designed and Developed by Tahmina Rahman </div>
+    <!--  <div class=""> &copy; 2020 Designed and Developed by Tahmina Rahman </div> -->
 
       <!-- Social media link with their icons and name 
         Facebook   https://www.flaticon.com/free-icon/facebook_124010#term=facebook&page=1&position=7 -->
-      <div class= "footer">
+      <div class= "">
         <ul>
-          <li class="socialli"> <a class="sociallink" href="https://www.linkedin.com/in/tahmina-rahman-754491141/"> <img src="images/in.png" alt="LinkedIn icon" class="smedia"> IN </a> </li>
-          <li class="socialli"> <a class="sociallink" href="https://twitter.com/tahmina97310758"> <img src="images/tw.png" alt=" icon" class="smedia"> TW </a> </li>
-          <li class="socialli"> <a class="sociallink" href="https://www.github.com/Tahmina3"> <img src="images/gh.png" alt=" icon" class="smedia"> GH </a> </li>
-          <li class="socialli"> <a class="sociallink" href="https://www.instagram.com/tahminar6/"> <img src="images/ig.png" alt=" icon" class="smedia"> IG </a> </li>        
+          <li class="social"> <a class="sociallink" href="https://www.linkedin.com/in/tahmina-rahman-754491141/" target="_blank"> <img src="images/in.png" alt="LinkedIn icon" class="socialicon"> IN </a> </li>
+          <li class="social"> <a class="sociallink" href="https://twitter.com/tahmina97310758" target="_blank"> <img src="images/tw.png" alt=" icon" class="socialicon"> TW </a> </li>
+          <li class="social"> <a class="sociallink" href="https://www.github.com/Tahmina3" target="_blank"> <img src="images/gh.png" alt=" icon" class="socialicon"> GH </a> </li>
+          <li class="social"> <a class="sociallink" href="https://www.instagram.com/tahminar6/" target="_blank"> <img src="images/ig.png" alt=" icon" class="socialicon"> IG </a> </li>        
         </ul>
       </div>
     </footer>
