--- a/index.html
+++ b/index.html
@@ -11,49 +11,57 @@
   </head>
   <body>
     <!--Navigation Bar -->
-    <span class="open" onclick="openNavbar()">&#9776;</span>
-    <div id="navbar" class="overlay">
-      <a href="javascript:void(0);" onclick="closeNavbar()" class="close">&#x2715;</a>
-      <div class="overlay-content">
-        <a href="index.html">Home</a>
-        <a href="javascript:void(o);">About</a>
-        <a href="javascript:void(o);">Work</a>
-        <a href="javascript:void(o);">Contact</a>
+  <div class="grid">
+    <div class="box">
+      <span class="open menu" onclick="openNavbar()">&#9776;</span>
+      <div id="navbar" class="overlay">
+        <a href="javascript:void(0);" onclick="closeNavbar()" class="close">&#x2715;</a>
+        <div class="overlay-content">
+          <a href="index.html">Home</a>
+          <a href="javascript:void(o)">About</a>
+          <a href="javascript:void(o);">Work</a>
+          <a href="javascript:void(o);">Contact</a>
+        </div>
       </div>
     </div>
 
-    <img src="images/logo.jpg" alt="Logo Image TR" class="logo">
-
+    <div class="box logo">
+      < TR >
+    </div>
 
     <h2 class="hidden">Hi! Welcome </h2>
     <h2 class="hidden"> This is Tahmina, it's me... </h2>
-<div>
 
-    <h1 class="name"> Tahmina Rahman </h1>
+<div class="box name">
+            <h1 class="name"> Tahmina Rahman </h1>
+  </div>
+		
+        <img src="images/150.png" alt="Tahmina's Photo" class="circle, hidden">
 
-    <img src="images/150.png" alt="Tahmina's Photo" class="circle, hidden">
-    
-    <a href="about.html" class="viewportfolio"> View Portfolio </a>
-</div>
-
-   <div>
-   <a href="https://www.figma.com/file/WYUTNiPFgrMbc8vTQ2Z5Li/my-cv?node-id=0%3A1" target="_blank" class="buttons btn"> Download CV>> </a>
-   </div>
-
-    <!-- Footer  -->  
-    <footer class="footer">
-    <!--  <div class=""> &copy; 2020 Designed and Developed by Tahmina Rahman </div> -->
-
-      <!-- Social media link with their icons and name 
-        Facebook   https://www.flaticon.com/free-icon/facebook_124010#term=facebook&page=1&position=7 -->
-      <div class= "">
-        <ul>
-          <li class="social"> <a class="sociallink" href="https://www.linkedin.com/in/tahmina-rahman-754491141/" target="_blank"> <img src="images/in.png" alt="LinkedIn icon" class="socialicon"> IN </a> </li>
-          <li class="social"> <a class="sociallink" href="https://twitter.com/tahmina97310758" target="_blank"> <img src="images/tw.png" alt=" icon" class="socialicon"> TW </a> </li>
-          <li class="social"> <a class="sociallink" href="https://www.github.com/Tahmina3" target="_blank"> <img src="images/gh.png" alt=" icon" class="socialicon"> GH </a> </li>
-          <li class="social"> <a class="sociallink" href="https://www.instagram.com/tahminar6/" target="_blank"> <img src="images/ig.png" alt=" icon" class="socialicon"> IG </a> </li>        
-        </ul>
+      <div class="box viewportfolio">
+          <a href="about.html" class="viewp"> View Portfolio </a>
       </div>
-    </footer>
+
+        <div class="box download">
+          <a href="https://www.figma.com/file/WYUTNiPFgrMbc8vTQ2Z5Li/my-cv?node-id=0%3A1" target="_blank" class="buttons btn"> <<  Download CV  >> </a>
+        </div>
+
+        <div class="box socialmedia">
+
+          <footer class="footer">        
+              <!-- Social media link with their icons and name -->
+              <div class= "">
+                <ul class="sul">
+                  <li class="sociallist"> <a class="sociallink" href="https://www.linkedin.com/in/tahmina-rahman-754491141/" target="_blank"> <img src="images/in.png" alt="LinkedIn icon" class="socialicon"> IN </a> </li>
+                  <li class="sociallist"> <a class="sociallink" href="https://twitter.com/tahmina97310758" target="_blank"> <img src="images/tw.png" alt=" icon" class="socialicon"> TW </a> </li>
+                  <li class="sociallist"> <a class="sociallink" href="https://www.github.com/Tahmina3" target="_blank"> <img src="images/gh.png" alt=" icon" class="socialicon"> GH </a> </li>
+                  <li class="sociallist"> <a class="sociallink" href="https://www.instagram.com/tahminar6/" target="_blank"> <img src="images/ig.png" alt=" icon" class="socialicon"> IG </a> </li>        
+                </ul>
+              </div>
+            </footer>
+        </div>
+
+
+  </div>
   </body>
   </html>
