--- a/index.html
+++ b/index.html
@@ -26,17 +26,18 @@
     </div>
 
     <div class="box logo">
-      < TR >
+      <a href="index.html" class="logolink"> < TR > </a>
     </div>
 
-    <h2 class="hidden">Hi! Welcome </h2>
-    <h2 class="hidden"> This is Tahmina, it's me... </h2>
+    <h2 class="textshow">Hi! <br>Welcome! <br>
+      This is Tahmina, it's me...
+    </h2>
 
 <div class="box name">
             <h1 class="name"> Tahmina Rahman </h1>
   </div>
 		
-        <img src="images/150.png" alt="Tahmina's Photo" class="circle, hidden">
+        <img src="images/150.png" alt="Tahmina's Photo" class="circle">
 
       <div class="box viewportfolio">
           <a href="about.html" class="viewp"> View Portfolio </a>
