--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title> Tahmina Rahman | Junior Web Developer </title>
     <meta name="description" content="Experienced Junior web designer and developer in HTML5, CSS, JavaScript, PHP, Java, MySQL">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/all.min.css">
     <script src="script.js"> </script>
     <link rel="icon" type="image/png" href="images/t.png">
   </head>
@@ -53,7 +54,7 @@
               <!-- Social media link with their icons and name -->
               <div class= "">
                 <ul class="sul">
-                  <li class="sociallist"> <a class="sociallink" href="https://www.linkedin.com/in/tahmina-rahman-754491141/" target="_blank"> <img src="images/in.png" alt="LinkedIn icon" class="socialicon"> IN </a> </li>
+                  <li class="sociallist"> <a class="sociallink" href="https://www.linkedin.com/in/tahmina-rahman-754491141/" target="_blank"> <img src="images/in.png" alt=" icon" class="socialicon"> IN </a> </li>
                   <li class="sociallist"> <a class="sociallink" href="https://twitter.com/tahmina97310758" target="_blank"> <img src="images/tw.png" alt=" icon" class="socialicon"> TW </a> </li>
                   <li class="sociallist"> <a class="sociallink" href="https://www.github.com/Tahmina3" target="_blank"> <img src="images/gh.png" alt=" icon" class="socialicon"> GH </a> </li>
                   <li class="sociallist"> <a class="sociallink" href="https://www.instagram.com/tahminar6/" target="_blank"> <img src="images/ig.png" alt=" icon" class="socialicon"> IG </a> </li>        
@@ -62,7 +63,7 @@
             </footer>
         </div>
 
-
+  
   </div>
   </body>
   </html>
