removed box, which is not needed anymore

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <!--Navigation Bar -->
   <div class="grid">
-    <div class="box">
+    <div>
       <span class="open menu" onclick="openNavbar()">&#9776;</span>
       <div id="navbar" class="overlay">
         <a href="javascript:void(0);" onclick="closeNavbar()" class="close">&#x2715;</a>
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <div class="box logo">
+    <div class="logo">
       <a href="index.html" class="logolink"> < TR > </a>
     </div>
 
@@ -34,17 +34,17 @@
       This is Tahmina, it's me...
     </h2>
 
-<div class="box name">
+<div class="name">
             <h1 class="name"> Tahmina Rahman </h1>
   </div>
 		
         <img src="images/150.png" alt="Tahmina's Photo" class="circle">
 
-      <div class="box viewportfolio">
+      <div class="viewportfolio">
           <a href="about.html" class="viewp"> View Portfolio </a>
       </div>
 
-        <div class="box download">
+        <div class="download">
           <a href="https://www.figma.com/file/WYUTNiPFgrMbc8vTQ2Z5Li/my-cv?node-id=0%3A1" target="_blank" class="buttons btn"> <<  Download CV  >> </a>
         </div>
 
