--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> Tahmina Rahman | Junior Web Developer </title>
     <meta name="description" content="Experienced Junior web designer and developer in HTML5, CSS, JavaScript, PHP, Java, MySQL">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/all.min.css">
+    <script src="https://kit.fontawesome.com/e862132404.js" crossorigin="anonymous"></script>
     <script src="script.js"> </script>
     <link rel="icon" type="image/png" href="images/t.png">
   </head>
@@ -19,9 +19,9 @@
         <a href="javascript:void(0);" onclick="closeNavbar()" class="close">&#x2715;</a>
         <div class="overlay-content">
           <a href="index.html">Home</a>
-          <a href="javascript:void(o)">About</a>
-          <a href="javascript:void(o);">Work</a>
-          <a href="javascript:void(o);">Contact</a>
+          <a href="about.html">About</a>
+          <a href="work.html">Work</a>
+          <a href="contact.html">Contact</a>
         </div>
       </div>
     </div>
@@ -52,12 +52,12 @@
 
           <footer class="footer">        
               <!-- Social media link with their icons and name -->
-              <div class= "">
+              <div>
                 <ul class="sul">
-                  <li class="sociallist"> <a class="sociallink" href="https://www.linkedin.com/in/tahmina-rahman-754491141/" target="_blank"> <img src="images/in.png" alt=" icon" class="socialicon"> IN </a> </li>
-                  <li class="sociallist"> <a class="sociallink" href="https://twitter.com/tahmina97310758" target="_blank"> <img src="images/tw.png" alt=" icon" class="socialicon"> TW </a> </li>
-                  <li class="sociallist"> <a class="sociallink" href="https://www.github.com/Tahmina3" target="_blank"> <img src="images/gh.png" alt=" icon" class="socialicon"> GH </a> </li>
-                  <li class="sociallist"> <a class="sociallink" href="https://www.instagram.com/tahminar6/" target="_blank"> <img src="images/ig.png" alt=" icon" class="socialicon"> IG </a> </li>        
+                  <li class="sociallist"> <a class="sociallink" href="https://www.linkedin.com/in/tahmina-rahman-754491141/" target="_blank"> <i class="fab fa-linkedin-in"></i> </a> </li>
+                  <li class="sociallist"> <a class="sociallink" href="https://twitter.com/tahmina97310758" target="_blank"> <i class="fab fa-twitter"></i> </a> </li>
+                  <li class="sociallist"> <a class="sociallink" href="https://www.github.com/Tahmina3" target="_blank"> <i class="fab fa-github"></i> </a> </li>
+                  <li class="sociallist"> <a class="sociallink" href="https://www.instagram.com/tahminar6/" target="_blank"> <i class="fab fa-instagram"></i> </a> </li>        
                 </ul>
               </div>
             </footer>
