--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,36 @@
     <div class="logo">
         <a href="index.html" class="logolink"> < TR > </a>
       </div>
+ 
       <h1> Contact </h1>
+
+      <div class="form";> 
+      <form action = "#" name = "contactForm" onsubmit = "return(validate());">
+        <table>
+        <tr>
+         <td>Firstname</td>
+         <td><input type="text" name="fname" class="fieldinput"/></td>
+        </tr>
+
+        <tr>
+          <td>Surname</td>
+          <td><input type="text" name="sname" class="fieldinput"/></td>
+         </tr>
+
+         <tr>
+          <td>Email</td>
+          <td><input type="text" name="email" class="fieldinput"/></td>
+         </tr>
+
+        <tr>
+            <td>Message </td>
+            <td><input type="text" name="message" class="messagebox"/></td>
+        </tr>
+
+        <tr> <td><input type = "submit" value = "Submit" class="submit buttons btn" /></td></tr>
+        </table>
+      </form>
+    </div>
 
 
       <div class="socialmedia">
