contact form changes to size

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <td><input type="text" name="message" class="messagebox"/></td>
         </tr>
 
-        <tr> <td><input type = "submit" value = "Submit" class="submit buttons btn" /></td></tr>
+        <tr> <td colspan="2"><input type = "submit" value = "Submit" class="submit buttons btn" /></td></tr>
         </table>
       </form>
     </div>
