about and contact changes size

--- a/about.html
+++ b/about.html
@@ -30,6 +30,27 @@
       </div>
       <h1> About </h1>
 
+      <div class="position">
+        <h3> Hi Welcome! </h3>
+
+        <span class="shorttext" > 
+           Hello! My name is Tahmina, Junior Web Developer. I love coding.
+        </span>
+
+        <span class="longtext">
+           My desire to become a web developer was born when I was in college and started to code in HTML and CSS. I became so excited about it and curious about websites, how they work, what features there are, how they look and everything. Since then I’m developing myself day by day. This portfolio has some of my work from beginning and you will see the development.
+        </span>
+
+        <span class="textdots"> ...</span><br>
+        
+        <span class="read-more-button" data-more="0"> Read More </span>
+      </div>
+
+      <img src="images/150.png" alt="Tahmina's Photo" class="circle">
+
+      <div class="downloadabout">
+          <a href="https://www.figma.com/file/WYUTNiPFgrMbc8vTQ2Z5Li/my-cv?node-id=0%3A1" target="_blank" class="dbtn dbuttons"> <<  Download CV  >> </a>
+      </div>
 
 
       <div class="socialmedia">
