--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
         <span class="read-more-button" data-more="0"> Read More </span>
       </div>
 
-      <img src="images/150.png" alt="Tahmina's Photo" class="circle">
+      <img src="images/150.png" alt="Tahmina's Photo" class="circleabout">
 
       <div class="downloadabout">
           <a href="https://www.figma.com/file/WYUTNiPFgrMbc8vTQ2Z5Li/my-cv?node-id=0%3A1" target="_blank" class="dbtn dbuttons"> <<  Download CV  >> </a>
