--- a/about.html
+++ b/about.html
@@ -33,17 +33,12 @@
       <div class="position">
         <h3> Hi Welcome! </h3>
 
-        <span class="shorttext" > 
-           Hello! My name is Tahmina, Junior Web Developer. I love coding.
-        </span>
-
-        <span class="longtext">
-           My desire to become a web developer was born when I was in college and started to code in HTML and CSS. I became so excited about it and curious about websites, how they work, what features there are, how they look and everything. Since then I’m developing myself day by day. This portfolio has some of my work from beginning and you will see the development.
-        </span>
-
-        <span class="textdots"> ...</span><br>
+        Hello! My name is Tahmina, Junior Web Developer. I love coding.
         
-        <span class="read-more-button" data-more="0"> Read More </span>
+        <div class="readmore">
+            My desire to become a web developer was born when I was in college and started to code in HTML and CSS. I became so excited about it and curious about websites, how they work, what features there are, how they look and everything. Since then I’m developing myself day by day. This portfolio has some of my work from beginning and you will see the development.
+        </div>
+
       </div>
 
       <img src="images/150.png" alt="Tahmina's Photo" class="circleabout">
