--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
       <h1> Contact </h1>
 
       <div class="form";> 
-      <form action = "#" name = "contactForm" onsubmit = "return(validate());">
+      <form action = "script.js" name = "contactForm" onsubmit = "return(validate());">
         <table>
         <tr>
          <td>Firstname</td>
