work started with list

--- a/work.html
+++ b/work.html
@@ -30,7 +30,17 @@
       </div>
       <h1> Work </h1>
 
+      <div id="">
 
+        Game using JavaScript - 2019 >>
+        Web Developer Site - 2019 >>
+        AMC Computer Supply Redesign - 2018 >>
+        BusyBee - 2018 >>
+        Wicksteed Educational Events - 2017 >>
+        Portfolio - 2016 >>
+        Zoomania 2016 >>
+
+      </div>
 
 
       <div class="socialmedia">
