--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     </h2>
 
 <div class="name">
-            <h1 class="name"> Tahmina Rahman </h1>
+            <h1 class="name" id="colourful"> Tahmina Rahman </h1>
   </div>
 		
         <img src="images/150.png" alt="Tahmina's Photo" class="circle">
 
       <div class="viewportfolio">
-          <a href="about.html" class="viewp"> View Portfolio </a>
+          <a href="about.html" class="viewp">&#x1f50d;View Portfolio</a>
       </div>
 
         <div class="download">
