--- a/work.html
+++ b/work.html
@@ -30,7 +30,7 @@
       </div>
       <h1> Work </h1>
 
-      <div id="">
+      <div class="position">
 
         Game using JavaScript - 2019 >>
         Web Developer Site - 2019 >>
