Work lists using javascript

--- a/work.html
+++ b/work.html
@@ -30,15 +30,92 @@
       </div>
       <h1> Work </h1>
 
-      <div class="position">
+      <div class="positionWork">
 
-        Game using JavaScript - 2019 >>
-        Web Developer Site - 2019 >>
-        AMC Computer Supply Redesign - 2018 >>
-        BusyBee - 2018 >>
-        Wicksteed Educational Events - 2017 >>
-        Portfolio - 2016 >>
-        Zoomania 2016 >>
+        <div>
+          <span class="openWork1 work1" onclick="openWork1()">Game using JavaScript - 2019 >></span>
+          <div id="work1" class="overlay1">
+            <div class="overlay-content1">
+              <h3>Game using JavaScript - 2019</h3>
+              <img src="images/.png" alt="Game using JavaScript Image" class="">
+
+              <p></p>
+              <a href="javascript:void(0);" onclick="closeWork1()" class="closeWork1">&#8592;</a>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <span class="openWork2 work2" onclick="openWork2()">Web Developer Site - 2019 >></span>
+          <div id="work2" class="overlay2">
+            <div class="overlay-content2">
+              <h3>Web Developer Site - 2019</h3>
+              <img src="images/.png" alt="Web Developer Site Image" class="">
+              <p></p>
+              <a href="javascript:void(0);" onclick="closeWork2()" class="closeWork2">&#8592;</a>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <span class="openWork3 work3" onclick="openWork3()">AMC Computer Supply Redesign - 2018 >></span>
+          <div id="work3" class="overlay3">
+            <div class="overlay-content3">
+              <h3>AMC Computer Supply Redesign - 2018</h3>
+              <img src="images/.png" alt="AMC Computer Supply Redesign Image" class="">
+              <p></p>
+              <a href="javascript:void(0);" onclick="closeWork3()" class="closeWork3">&#8592;</a>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <span class="openWork4 work4" onclick="openWork4()">BusyBee - 2018 >></span>
+          <div id="work4" class="overlay4">
+            <div class="overlay-content4">
+              <h3>BusyBee - 2018</h3>
+              <img src="images/.png" alt="BusyBee Image" class="">
+              <p></p>
+              <a href="javascript:void(0);" onclick="closeWork4()" class="closeWork4">&#8592;</a>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <span class="openWork5 work5" onclick="openWork5()">Wicksteed Educational Events - 2017 >></span>
+          <div id="work5" class="overlay5">
+            <div class="overlay-content5">
+              <h3>Wicksteed Educational Events - 2017</h3>
+              <img src="images/.png" alt="Wicksteed Educational Events Image" class="">
+              <p></p>
+              <a href="javascript:void(0);" onclick="closeWork5()" class="closeWork5">&#8592;</a>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <span class="openWork6 work6" onclick="openWork6()">Portfolio - 2016 >></span>
+          <div id="work6" class="overlay6">
+            <div class="overlay-content6">
+              <h3>Portfolio - 2016</h3>
+              <img src="images/.png" alt="Portfolio2016 Image" class="">
+              <p></p>
+              <a href="javascript:void(0);" onclick="closeWork6()" class="closeWork6">&#8592;</a>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <span class="openWork7 work7" onclick="openWork7()">Zoomania - 2016 >></span>
+          <div id="work7" class="overlay7">
+            <div class="overlay-content7">
+              <h3>Zoomania - 2016</h3>
+              <img src="images/.png" alt="Zoomania Image" class="">
+              <p></p>
+              <a href="javascript:void(0);" onclick="closeWork7()" class="closeWork7">&#8592;</a>
+            </div>
+          </div>
+        </div>
 
       </div>
 
