added images in work page, contact form size fixed in desktop version

--- a/contact.html
+++ b/contact.html
@@ -31,26 +31,26 @@
  
       <h1> Contact </h1>
 
-      <div class="form";> 
+      <div class="form"> 
       <form action = "script.js" name = "contactForm" onsubmit = "return(validate());">
         <table>
         <tr>
-         <td>Firstname</td>
+         <td class="label">Firstname</td>
          <td><input type="text" name="fname" class="fieldinput"/></td>
         </tr>
 
         <tr>
-          <td>Surname</td>
+          <td class="label">Surname</td>
           <td><input type="text" name="sname" class="fieldinput"/></td>
          </tr>
 
          <tr>
-          <td>Email</td>
+          <td class="label">Email</td>
           <td><input type="text" name="email" class="fieldinput"/></td>
          </tr>
 
         <tr>
-            <td>Message </td>
+            <td class="label">Message </td>
             <td><input type="text" name="message" class="messagebox"/></td>
         </tr>
 
