--- a/work.html
+++ b/work.html
@@ -37,9 +37,8 @@
           <div id="work1" class="overlay1">
             <div class="overlay-content1">
               <h3>Game using JavaScript - 2019</h3>
-              <img src="images/.png" alt="Game using JavaScript Image" class="">
-
-              <p></p>
+              <img src="images/gamejs2019.JPG" alt="Game using JavaScript Image" class="workImages">
+              <p>In this game I had to shoot arrows to enemies and remove them from the game area displaying an animation. The player could move anywhere and if arrow hit a tree it gets stuck.</p>
               <a href="javascript:void(0);" onclick="closeWork1()" class="closeWork1">&#8592;</a>
             </div>
           </div>
@@ -48,10 +47,10 @@
         <div>
           <span class="openWork2 work2" onclick="openWork2()">Web Developer Site - 2019 >></span>
           <div id="work2" class="overlay2">
-            <div class="overlay-content2">
+            <div class="overlay-content1">
               <h3>Web Developer Site - 2019</h3>
-              <img src="images/.png" alt="Web Developer Site Image" class="">
-              <p></p>
+              <img src="images/wdevsite2018.JPG" alt="Web Developer Site Image" class="workImages">
+              <p>This was a site structured like newspaper where I had to create many web pages like , tutorials, reviews, jobs. In the home page I had included details about myself and everything was well structured. </p>
               <a href="javascript:void(0);" onclick="closeWork2()" class="closeWork2">&#8592;</a>
             </div>
           </div>
@@ -60,10 +59,10 @@
         <div>
           <span class="openWork3 work3" onclick="openWork3()">AMC Computer Supply Redesign - 2018 >></span>
           <div id="work3" class="overlay3">
-            <div class="overlay-content3">
+            <div class="overlay-content1">
               <h3>AMC Computer Supply Redesign - 2018</h3>
-              <img src="images/.png" alt="AMC Computer Supply Redesign Image" class="">
-              <p></p>
+              <img src="images/amc2018.JPG" alt="AMC Computer Supply Redesign Image" class="workImages">
+              <p>In this project I had to redesign an existing website which is AMC computer supply, they had last update many years ago and everything was outdated, it wasn’t a good website and had many things that needed improvements.</p>
               <a href="javascript:void(0);" onclick="closeWork3()" class="closeWork3">&#8592;</a>
             </div>
           </div>
@@ -72,10 +71,10 @@
         <div>
           <span class="openWork4 work4" onclick="openWork4()">BusyBee - 2018 >></span>
           <div id="work4" class="overlay4">
-            <div class="overlay-content4">
+            <div class="overlay-content1">
               <h3>BusyBee - 2018</h3>
-              <img src="images/.png" alt="BusyBee Image" class="">
-              <p></p>
+              <img src="images/busybee2017.JPG" alt="BusyBee Image" class="workImages">
+              <p>For this one I had to create a website for their company and put their services, with images, slides and a contact form. I have also created a logo. Here I used my first JavaScript functionality, if a button I clicked the it changes and image to another image.</p>
               <a href="javascript:void(0);" onclick="closeWork4()" class="closeWork4">&#8592;</a>
             </div>
           </div>
@@ -84,10 +83,10 @@
         <div>
           <span class="openWork5 work5" onclick="openWork5()">Wicksteed Educational Events - 2017 >></span>
           <div id="work5" class="overlay5">
-            <div class="overlay-content5">
+            <div class="overlay-content1">
               <h3>Wicksteed Educational Events - 2017</h3>
-              <img src="images/.png" alt="Wicksteed Educational Events Image" class="">
-              <p></p>
+              <img src="images/wevents2016.JPG" alt="Wicksteed Educational Events Image" class="workImages">
+              <p>In the second year of college I had to create a website for Wicksteed park (Kettering, UK) with details about their events, it was part of an assignment.</p>
               <a href="javascript:void(0);" onclick="closeWork5()" class="closeWork5">&#8592;</a>
             </div>
           </div>
@@ -96,10 +95,10 @@
         <div>
           <span class="openWork6 work6" onclick="openWork6()">Portfolio - 2016 >></span>
           <div id="work6" class="overlay6">
-            <div class="overlay-content6">
+            <div class="overlay-content1">
               <h3>Portfolio - 2016</h3>
-              <img src="images/.png" alt="Portfolio2016 Image" class="">
-              <p></p>
+              <img src="images/portfolio2016.JPG" alt="Portfolio2016 Image" class="workImages">
+              <p>I have created a portfolio in 2016, but obviously it wasn’t good enough. I tried my best though.</p>
               <a href="javascript:void(0);" onclick="closeWork6()" class="closeWork6">&#8592;</a>
             </div>
           </div>
@@ -108,10 +107,10 @@
         <div>
           <span class="openWork7 work7" onclick="openWork7()">Zoomania - 2016 >></span>
           <div id="work7" class="overlay7">
-            <div class="overlay-content7">
+            <div class="overlay-content1">
               <h3>Zoomania - 2016</h3>
-              <img src="images/.png" alt="Zoomania Image" class="">
-              <p></p>
+              <img src="images/zoomania2016.JPG" alt="Zoomania Image" class="workImages">
+              <p>This was my first website created using notepad. First time using HTML and CSS. I didn’t know much about HTML and CSS at that moment.</p>
               <a href="javascript:void(0);" onclick="closeWork7()" class="closeWork7">&#8592;</a>
             </div>
           </div>
