--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/e862132404.js" crossorigin="anonymous"></script>
     
-    <link rel="icon" type="image/png" href="images/t.png">
+    <link rel="icon" type="image/png" href="images/tr.jpg">
   </head>
   <body>
     <!--Navigation Bar -->
@@ -41,7 +41,7 @@
         <img src="images/150.png" alt="Tahmina's Photo" class="circle">
 
       <div class="viewportfolio">
-          <a href="about.html" class="viewp">&#x1f50d;View Portfolio</a>
+          <a href="about.html" class="viewp">View Portfolio</a>
       </div>
 
         <div class="download">
